# ktx-creator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/atk/: astc.h  image.h  ktx.h  magick.h  texture.h  util.h
src/: astc.cpp  astc_encoder.cpp  image.cpp  ktx.cpp  magick.cpp  main.cpp  texture.cpp  util.cpp
test/: CMakeLists.txt
test/astc/: lenna.astc  map.astc
test/ktx/: lenna.astc.ktx  lenna.png.astc.ktx  lenna.png.ktx  map.astc.ktx  map.png.astc.ktx
test/png/: lenna-alpha.txt  lenna-npot.png.ktx  lenna.txt  map-mipmaps.ktx
test/src/: astc_test.cpp  ktx_test.cpp  main.cpp  png_test.cpp  texture_test.cpp  util_test.cpp
